Fixing card’s spacing issue on mobile

--- a/src/components/case-study-section/case-study-2/index.module.scss
+++ b/src/components/case-study-section/case-study-2/index.module.scss
@@ -16,6 +16,7 @@ $line-height: 50px;
 
 .logoImage img {
   max-height: 90px;
+  width: auto;
 }
 
 .marginTop {
@@ -42,6 +43,7 @@ $line-height: 50px;
 .greyLogo img {
   filter: invert(17%) brightness(88%) contrast(60%);
   max-height: 90px;
+  width: auto;
 }
 
 .line {
