--- a/src/components/case-study-section/case-study-5/index.module.scss
+++ b/src/components/case-study-section/case-study-5/index.module.scss
@@ -11,6 +11,7 @@
 
 .logoImage img {
   max-height: 90px;
+  width: auto;
 }
 
 .growforge_logo {
